refactor: simplify CLI and prep repo for public release
- Replace --with-makemkv/--with-menus with --backend driving MakeMKV install
- Collapse container-create into one args-array call; drop double dnf update
- Add ACL-aware optical-device access check with group guidance
- Drop unsupported disc-menu feature; document VLC + JDK 8 path in AGENTS
- Condense AGENTS gotchas to one-line bullets; codify comment/commit style
- Add Legal license-scope note and Conventional Commits guidance
- Fix stale wrapper/summary and Legal references

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>