@@ -16,14 +16,13 @@ Components:
 - **Decryption backend**, selected by `--backend`:
   - `free` (default): `libaacs` + `libbdplus` + a downloaded `KEYDB.cfg`.
   - `makemkv`: `libmmbd`, symlinked over the AACS/BD+ libraries.
-- Optional BD-J (Java menu) support via `--with-menus`.
 - GPU + optical drive passthrough for hardware-decoded playback on Wayland.
 
 ## Design goals
 
 - Re-runnable and mostly idempotent; running twice is safe.
-- No host pollution — everything, including the MakeMKV build, happens in the container.
-- Non-interactive by default (`|| true` on best-effort installs, pre-answered prompts).
+- No base-OS changes — all packages and the MakeMKV build stay in the container; only user-home helper files are written.
+- Non-interactive by default — `--yes`, pre-answered EULA, skippable key prompt.
 - Works across AMD/Intel/NVIDIA GPUs.
 
 ## Repository layout
@@ -80,7 +79,8 @@ sudo ln -sf "$LIBMMBD" /usr/lib64/libbdplus.so.0
 ```
 
 Switching back to `free` means removing those symlinks and reinstalling the real
-libs. `--backend makemkv` without `--with-makemkv` is rejected.
+libs. `--backend makemkv` is what installs and activates MakeMKV; `free` (the
+default) installs neither.
 
 ## Configuration
 
@@ -93,7 +93,7 @@ MAKEMKV_VER="1.18.4"   # must match https://www.makemkv.com/download/
 
 `MAKEMKV_VER` is maintained by hand — the website tarballs are not discoverable
 programmatically. Pin `IMAGE` to a specific Fedora tag (never `:latest`); a new
-major version can break the Java/BD-J and MakeMKV build steps.
+major version can break the MakeMKV build step.
 
 ## Execution flow
 
@@ -102,106 +102,53 @@ major version can break the Java/BD-J and MakeMKV build steps.
 3. Detect devices → build `--device` flags.
 4. Create the container (with `--nvidia` and device flags) if missing.
    `--force-recreate` removes it first.
-5. Install core packages (mpv, libbluray stack, Mesa drivers).
-6. Optional BD-J / Java (`--with-menus`).
-7. If `--with-makemkv`: build + install MakeMKV (oss then bin); if
-   `--backend makemkv`, create libmmbd symlinks; then `check_makemkv_key()` on host.
-8. Write the `play-bluray` wrapper.
-9. Print summary.
+5. Install core packages (mpv, libbluray stack, Mesa drivers, RPM Fusion ffmpeg).
+6. If `--backend makemkv`: build + install MakeMKV (oss then bin), create libmmbd
+   symlinks, then `check_makemkv_key()` on host.
+7. Write the `play-bluray` wrapper.
+8. Print summary.
 
 ## Gotchas and rules
 
-### MakeMKV build: never glob `cd`
+- **MakeMKV `cd` globbing:** after extract, `cd` the explicit `makemkv-oss-$VER` dir, never `makemkv-oss-*` — the leftover tarball makes the glob match two paths (`cd: too many arguments`). Use absolute `cd ~/makemkv-build` between the oss and bin builds.
+- **MakeMKV EULA:** the bin `make` step (not `make install`) aborts on the EULA prompt; pre-create its marker `tmp/eula_accepted` in the build dir before `make`. Piping `yes` or sed-patching the Makefile are unreliable.
+- **Never mask `dnf install` with `|| true`:** install is atomic, so one absent package name fails the whole transaction and the mask hides it (bit us on `gcc-c++`, and on `java-21` which F44 lacks). Pin to packages that exist.
+- **Use one ffmpeg:** the player install pulls RPM Fusion full `ffmpeg`, so the MakeMKV build must use `ffmpeg-devel`, not Fedora's `libav*-free-devel` (the `-free` libs conflict with the full `ffmpeg-libs`).
+- **Device passthrough:** pass `/dev/dri` as a directory (`--device /dev/dri`); file/by-path forms error with "No such file". NVIDIA nodes are added individually plus host-side `--nvidia` (when `/dev/nvidia0` exists); best results need host `nvidia-container-toolkit`.
+- **Wayland passthrough is automatic:** distrobox already shares the host Wayland/X11 sockets and `/run/user/$UID`. Re-mounting them (`--volume /run/user/$UID`, `/tmp/.X11-unix`) makes podman fail with `duplicate mount destination`.
+- **No window, audio only:** VO/display problem — pass `--vo=gpu-next --gpu-context=auto --force-window=immediate` (use `auto`, never hardcoded `=wayland`, which hard-fails to audio-only). Isolate with `--vo=wlshm`.
+- **Black window, audio plays:** missing HEVC decoder. Fedora's `ffmpeg-free`/`mesa-va-drivers` strip it; install RPM Fusion `ffmpeg ffmpeg-libs` + `mesa-*-freeworld` via `dnf install --allowerasing` (not `swap`, to stay idempotent). mpv logs `Failed to initialize a decoder for codec 'hevc'` even with `--hwdec=no`.
+- **`No protocol handler ... bd://`:** libaacs/libbdplus (or their libmmbd replacements) missing, or the disc needs an absent key — makemkv backend + symlinks + valid key is the usual fix.
+- **KEYDB.cfg:** host path `~/.config/aacs/KEYDB.cfg` (exact case); from `http://fvonline-db.bplaced.net/fv_download.php?lang=eng`; refresh with `--setup-keys-only --force-recreate`. Newer discs fail with AACS errors until it's updated.
+- **MakeMKV key:** `check_makemkv_key()` (host, only under `--backend makemkv`) checks `^app_Key` in `~/.MakeMKV/settings.conf` and prompts; the build pre-creates a skeleton.
 
-`rm -rf` clears old build dirs but `curl` leaves the `.tar.gz` files behind, so a
-`makemkv-oss-*` glob matches both the tarball and the extracted directory —
-`cd` then gets multiple arguments and fails (`cd: too many arguments`). Always
-`cd` into the explicit versioned directory name, and return via an absolute
-`cd ~/makemkv-build` between the oss and bin builds.
+## Disc menus (not shipped — VLC + legacy JDK recipe)
 
-### MakeMKV EULA: must be fully non-interactive
+Menus are intentionally unsupported. mpv only does title playback and never
+drives libbluray's menu mode, so it can't show HDMV or BD-J menus regardless of
+Java. The verified path, if we ever want them, is **VLC + a legacy JDK**:
 
-The `makemkv-bin` EULA prompt (and "Aborting installation") fires during the
-plain `make` step for the bin tarball (target `tmp/eula_accepted` around
-Makefile:48). It is **not** during `sudo make install`.
-
-Reliable non-interactive method (used by distro packagers):
-
-```bash
-cd makemkv-bin-VER
-mkdir -p tmp
-echo accepted > tmp/eula_accepted
-make -j$(nproc)
-sudo make install
-```
-
-Piping `yes`, touching `/tmp/...`, or `sed`-patching the Makefile are fragile
-and do not work reliably (the prompt code may read from `/dev/tty`, the check
-is a file existence for `tmp/eula_accepted` in the build dir, and sed strings
-drift across versions).
-
-Pre-create the marker file in the build directory **before** `make`. The
-`rm -rf` + fresh extract happens on every `--with-makemkv` run, so the marker
-is always set for that build.
-
-### Java / BD-J
-
-`java-1.8.0-openjdk` does not exist in Fedora 44 images. BD-J uses Java 21 +
-`java-latest-openjdk-headless`, installed only under `--with-menus` with `|| true`
-(support is experimental and disc-dependent).
-
-### Device passthrough
-
-Pass `/dev/dri` as a **directory** (`--device /dev/dri`); individual-file or
-by-path forms caused "No such file" errors in the container. NVIDIA nodes are
-added individually, and the host side also sets `--nvidia` when `/dev/nvidia0`
-exists. Best NVIDIA + Wayland results need host-side `nvidia-container-toolkit`.
-
-### Wayland passthrough is automatic
-
-distrobox already shares the host Wayland/X11 sockets and `/run/user/$UID`. Don't
-add `--volume /run/user/$UID` or `/tmp/.X11-unix` to `--additional-flags` —
-podman fails with `duplicate mount destination`. Keep those flags to devices and
-`--group-add video`.
-
-### No window vs. black window — different causes
-
-- **No window, audio only:** VO/display. Pass `--vo=gpu-next --gpu-context=auto
-  --force-window=immediate`; use `auto`, not a hardcoded `=wayland` (which
-  hard-fails to audio-only when no Wayland context). Isolate with `--vo=wlshm`:
-  window appears → passthrough works, issue is GPU/VO context.
-- **Window opens, video black, audio plays:** a decoder problem → next item.
-
-### HEVC black video: Fedora codec stripping
-
-Fedora's `ffmpeg-free`/`mesa-va-drivers` omit HEVC/H.265. Most UHD/newer discs
-are HEVC, so they play audio with a black window; mpv logs `Failed to initialize
-a decoder for codec 'hevc'` even with `--hwdec=no`. Fix (script does this after
-enabling RPM Fusion): install the freeworld builds —
-`ffmpeg ffmpeg-libs` + `mesa-va-drivers-freeworld`/`mesa-vdpau-drivers-freeworld`.
-Use `dnf install --allowerasing`, not `dnf swap`, so re-runs stay idempotent.
-
-### KEYDB.cfg
-
-- Host path: `~/.config/aacs/KEYDB.cfg` (exact case/path matter).
-- Source: `http://fvonline-db.bplaced.net/fv_download.php?lang=eng`.
-- Extraction searches the zip for a `.cfg`/`*keydb*` file, with fallbacks.
-- Refresh: `./setup-bluray-player.sh --setup-keys-only --force-recreate`.
-
-Newer protected discs fail with AACS errors until KEYDB (or MakeMKV) is updated.
-
-### `No protocol handler found to open URL bd://`
-
-Means libaacs/libbdplus (or their libmmbd replacements) are missing, or the disc
-needs a key that isn't present. The makemkv backend + symlinks + a valid key is
-the usual fix.
-
-### MakeMKV key
-
-`check_makemkv_key()` runs on the host only when `--with-makemkv` is set. It looks
-for `^app_Key` in `~/.MakeMKV/settings.conf` and prompts otherwise. The build step
-pre-creates a skeleton `settings.conf`. Free monthly beta keys:
-https://www.makemkv.com/forum2/viewtopic.php?f=5&t=1053
+1. **Packages** (in container): `libbluray-bdj libbluray-utils vlc`.
+2. **JDK with a working SecurityManager.** BD-J sandboxes disc Java via
+   `SecurityManager`, which JDK 24 removed — and F44 ships only JDK 25/latest.
+   Use **Temurin JDK 8**: SecurityManager works with no
+   `-Djava.security.manager=allow` flag, and it matches the jar exactly
+   (`libbluray-*-j2se` is Java 8 bytecode, class version 52). Bundle it
+   self-contained in the container:
+   ```bash
+   curl -fsSL -o /tmp/jdk8.tgz \
+     "https://api.adoptium.net/v3/binary/latest/8/ga/linux/x64/jdk/hotspot/normal/eclipse"
+   mkdir -p ~/.local/lib/temurin8 && tar -C ~/.local/lib/temurin8 -xf /tmp/jdk8.tgz
+   ```
+3. **Launch** — point libbluray at the JDK via `JAVA_HOME`, and force VLC audio to
+   `pulse` (its native `pipewire` aout in 3.0.x is broken: `sample frequency (0)`
+   + stuttering):
+   ```bash
+   JAVA_HOME=~/.local/lib/temurin8/jdk8u<ver> vlc --aout=pulse bluray:///dev/sr0
+   ```
+   `BD_DEBUG_MASK=0x90` surfaces BD-J VM logs (`0x80` is the BDJ flag). Verified
+   working: video + menus render, audio clean. Would live as a VLC menu launcher
+   alongside the mpv title-playback wrapper.
 
 ## Diagnostics
 
@@ -211,7 +158,6 @@ distrobox enter bazzite-bluray -- mpv --vo=gpu-next --hwdec=auto \
   --gpu-context=auto --no-terminal bd:// --bluray-device=/dev/sr0
 
 # Inside the container
-bd_info /dev/sr0            # BD-J status
 makemkvcon info disc:0
 ls -l /usr/lib64/libaacs*   # should point at libmmbd under the makemkv backend
 ```
@@ -229,22 +175,22 @@ Checklist when playback is broken:
 
 - Use `--force-recreate` during development; recreate the container after editing
   device or container-creation logic.
-- Test both backends (free + KEYDB, and `--with-makemkv --backend makemkv`), and
-  with/without `--with-menus`.
+- Test both backends (`--backend free` and `--backend makemkv`).
 - Verify the generated `play-bluray` wrapper contains the gpu-next flags.
 - Confirm `set -e` actually halts the MakeMKV build on failure — the "complete"
   message must not appear if an earlier step failed.
 
 ## Known limitations
 
-- BD-J / menu support is hit-or-miss even with `--with-menus`.
+- No disc menus (HDMV or BD-J): mpv does title playback only. A VLC + legacy-JDK
+  path works if ever needed — see "Disc menus" above.
 - Very new discs may need a fresh MakeMKV beta key or updated KEYDB.
 - Assumes an x86_64 Fedora toolbox image.
 - `MAKEMKV_VER` must be bumped manually.
 
 ## Future ideas
 
-- A `--verify` health-check subcommand (symlinks, key, mpv version, `bd_info`).
+- A `--verify` health-check subcommand (symlinks, key, mpv version, devices).
 - Optional cleanup of `~/makemkv-build` after install.
 - `.desktop` integration that survives OS updates.
 - Custom container image support.
@@ -257,8 +203,10 @@ Checklist when playback is broken:
 - distrobox: https://distrobox.it/
 - Arch Wiki "Blu-ray"
 
----
+## Contributing & style
 
-When you fix something non-obvious, add it to **Gotchas and rules** with the
-symptom, cause, and the rule going forward. Update `README.md` only for
-user-visible changes. Don't regress the non-interactive, re-runnable design.
+- **Comments: minimal and short.** Explain the non-obvious *why* in one line; never narrate what the code already says. Delete a comment before letting it go stale.
+- **Docs: no bloat.** `README.md` stays terse and user-facing. `AGENTS.md` holds durable rationale and gotchas as one-line bullets (symptom → cause → rule); expand only when a one-liner genuinely can't carry it. When in doubt, cut.
+- **Keep the script non-interactive and re-runnable.** Prefer `--yes`/pre-answered prompts and `install --allowerasing` over `dnf swap`; never mask a real failure with `|| true`.
+- **Commit messages:** [Conventional Commits](https://www.conventionalcommits.org) — `feat:`, `fix:`, `docs:`, `refactor:`, `chore:`, etc.
+- Fixed something non-obvious? Add a bullet to **Gotchas and rules**. Changed user-visible behavior? Update `README.md`.
